# arksim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  codecov.yml  pyproject.toml  pytest.ini  release-please-config.json
.claude/: settings.json
.claude/rules/: python-style.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: version-docs.py
.github/workflows/: ci.yml  codeql.yml  integration-tests.yml  pr-checks.yml  publish-pypi.yml  publish-testpypi.yml  release-please.yml  version-docs.yml
arksim/: __init__.py  cli.py  config.yaml  config_evaluate.yaml  config_simulate.yaml  config_simulate_evaluate.yaml  constants.py
arksim/config/: __init__.py  types.py  utils.py
arksim/evaluator/: __init__.py  base_metric.py  builtin_metrics.py  entities.py  error_detection.py  error_scenarios.py  evaluate.py  evaluator.py  focus.py  prompt_registry.py  root_cause_analysis.py  thresholds.py  tool_call_metrics.py  trajectory_matching.py
arksim/scenario/: __init__.py  entities.py
arksim/simulation_engine/: __init__.py  entities.py  simulator.py  tool_types.py
arksim/telemetry/: __init__.py  config.py  instrumentation.py  provider.py
arksim/templates/: config.yaml  config_a2a.yaml  my_agent.py  scenarios.json
arksim/tracing/: __init__.py  _attrs.py  config.py  context.py  openai.py  openai_agents.py  propagation.py  receiver.py  span_converter.py
arksim/ui/: app.py
arksim/utils/: module_loader.py
docs/: CONTRIBUTING.md  LICENSE  README.md  agent_configurations.mdx  build-scenario.mdx  ci-integration.mdx  contact-email.mdx  docs.json  e-commerce-customer-service-agent-evaluation.mdx  evaluate-conversation.mdx  input-setup.mdx  installation.mdx  insurance-customer-service-agent-evaluation.mdx  integrations.mdx  overview.mdx  personal-ai-assistant-molt-bot-evaluation.mdx  personal-ai-assistant-openclaw-evaluation.mdx  quickstart.mdx  results.mdx  runtime-configuration.mdx  schema-reference.mdx  simulate-conversation.mdx  styles.css  trace-receiver.md
docs/main/: build-scenario.mdx  ci-integration.mdx  contact-email.mdx  customer-service-tool-calling-agent-evaluation.mdx  e-commerce-customer-service-agent-evaluation.mdx  evaluate-conversation.mdx  installation.mdx  insurance-customer-service-agent-evaluation.mdx  integrations.mdx  overview.mdx  personal-ai-assistant-openclaw-evaluation.mdx  quickstart.mdx  schema-reference.mdx  simulate-conversation.mdx  tool-call-capture.mdx  trace-receiver.mdx
docs/v0.2.0/: e-commerce-customer-service-agent-evaluation.mdx  evaluate-conversation.mdx  insurance-customer-service-agent-evaluation.mdx  personal-ai-assistant-openclaw-evaluation.mdx  schema-reference.mdx  simulate-conversation.mdx
docs/v0.3.0/: evaluate-conversation.mdx  insurance-customer-service-agent-evaluation.mdx  overview.mdx  quickstart.mdx
docs/v0.3.x/: build-scenario.mdx  ci-integration.mdx  customer-service-tool-calling-agent-evaluation.mdx  e-commerce-customer-service-agent-evaluation.mdx  evaluate-conversation.mdx  integrations.mdx  overview.mdx  personal-ai-assistant-openclaw-evaluation.mdx  quickstart.mdx  schema-reference.mdx
examples/bank-insurance/: README.md  agent_config.json  agent_config_a2a.json  agent_config_chat_completions.json  config.yaml  config_a2a.yaml  config_chat_completions.yaml  config_custom.yaml  config_evaluate.yaml  config_simulate.yaml  custom_agent.py  custom_metrics.py  run_pipeline.py  scenarios.json
examples/ci/: README.md
examples/claude-agent-sdk/: README.md  custom_agent.py
examples/crewai/: custom_agent.py
examples/customer-service/: README.md  config.yaml  config_a2a.yaml  config_chat_completions.yaml  config_custom.yaml  config_evaluate.yaml  config_simulate.yaml  config_traced.yaml  custom_agent.py  custom_metrics.py  requirements-traced.txt  run_pipeline.py  scenarios.json  tools.py  traced_agent.py
examples/e-commerce/: README.md  agent_config.json  agent_config_chat_completions.json  config.yaml  config_a2a.yaml  config_chat_completions.yaml  config_custom.yaml  config_evaluate.yaml  config_simulate.yaml  custom_agent.py  custom_metrics.py  run_pipeline.py  scenarios.json
examples/financial-research/: README.md  config.yaml  requirements.txt  scenarios.json  scenarios_backup.json  scenarios_backup2.json  simulation.json
examples/github-actions/: README.md  arksim.yml
examples/google-adk/: custom_agent.py
examples/integrations/rasa/rasa_project/: .gitignore  config.yml  domain.yml  endpoints.yml  pyproject.toml
examples/integrations/rasa/rasa_project/actions/: actions.py
examples/integrations/rasa/rasa_project/data/: flows.yml  nlu.yml  rules.yml
examples/langchain/: README.md  config.yaml  custom_agent.py
examples/llamaindex/: custom_agent.py
examples/openai-agents-sdk/: custom_agent.py  scenarios.json
examples/openclaw/: README.md  agent_config.json  config.yaml  scenarios.json
examples/tool-calling/: README.md  config.yaml  scenarios.json
examples/tool-calls/: config.yaml  custom_agent.py  scenarios.json
integration-tests/code/: test_simulation.py
integration-tests/program/: conftest.py  test_chat_completions_tool_capture.py  test_eval_agent_behaviour_failure.py  test_evaluation.py  test_multi_provider.py  test_simulate_evaluate.py  test_simulation.py
integration-tests/shell/: _shared.sh  run_all.sh  test_claude_agent_sdk.sh  test_crewai.sh  test_google_adk.sh  test_langchain.sh  test_llamaindex.sh  test_openai_agents_sdk.sh
integration-tests/test_data/: eval_test_simulation.json
integrations/claude_code/: E2E_TEST_REPORT.md  README.md
scripts/: check-changelog.sh
tests/: conftest.py  integration_trace_receiver.py  trace_receiver_test_results.txt
tests/functional/: test_eval_e2e.py
tests/integration/: test_trace_receiver_otel.py
tests/test_data/: eval_test_simulation.json  fmted_test_simulate_data.json  test_empty_responses.json  test_simulate_data.json
(+342 files in other folders)
