[project]
name = "arksim"
dynamic = ["version"]
description = "⛵️ Know how your agent performs before it goes live."
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Arklex", email = "support@arklex.ai"}]
requires-python = ">=3.10.0,<3.14.0"
keywords = ["ai", "agents", "simulation", "evaluation", "testing", "llm", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.0",
    "tqdm",
    "pyyaml>=6.0",
    "a2a-sdk>=1.0.0,<2.0.0",
    "jinja2>=3.1.5",
    "openai>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/arklexai/arksim"
Documentation = "https://docs.arklex.ai/main/overview"
Repository = "https://github.com/arklexai/arksim"
Issues = "https://github.com/arklexai/arksim/issues"
Changelog = "https://github.com/arklexai/arksim/blob/main/CHANGELOG.md"

[project.optional-dependencies]
azure = [
    "azure-identity>=1.20.0",
]
anthropic = [
    "anthropic>=0.77.1",
]
google = [
    "google-genai>=1.26.0",
]
otel = [
    "opentelemetry-proto>=1.20.0",
]
claude = [
    "fastmcp>=2.0.0,<4",
]
all = [
    "arksim[azure,anthropic,google,otel,claude]",
]
dev = [
    "pytest",
    "pytest-asyncio>=0.24.0",
    "pytest-cov",
    "pytest-timeout",
    "pre-commit",
    "ruff",
]

[project.scripts]
arksim = "arksim.cli:main"
arksim-mcp = "integrations.claude_code.mcp_server.server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "arksim/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["arksim", "integrations"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle (formatting errors)
  "F",   # pyflakes (undefined names, etc.)
  "FA",  # flake8-future-annotations (require `from __future__ import annotations`)
  "I",   # isort (import sorting)
  "UP",  # pyupgrade (modernizes syntax)
  "ANN", # flake8-annotations (type hints)
  "B",   # flake8-bugbear (likely bugs/bad practices)
  "SIM", # flake8-simplify (simpler constructs)
  "C4",  # flake8-comprehensions
  "TID", # flake8-tidy-imports
]
ignore = [
  "E501",  # Line too long (managed by ruff format)
  "UP045", # Use X | None instead of Optional[X] - keep for compatibility
]

[tool.coverage.run]
source = ["arksim", "integrations"]

[tool.coverage.report]
fail_under = 60

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B110"]
